add working docker compose

--- a/canvas.conf
+++ b/canvas.conf
@@ -3,8 +3,8 @@ events {
     worker_connections  1024;
 }
 http {
-    passenger_root /var/lib/gems/3.0.0/gems/passenger-6.0.19;
-    passenger_ruby /usr/bin/ruby3.0;
+    passenger_root /var/lib/gems/3.0.0/gems/passenger-6.0.20;
+    passenger_ruby /root/.rbenv/shims/ruby;
 
     include       mime.types;
     default_type  application/octet-stream;
