--- a/config/domain.yml
+++ b/config/domain.yml
@@ -9,8 +9,8 @@ development:
   # ssl: true
 
 production:
-  domain: "localhost:3000"
+  domain: "pandasoncode.com"
   # whether this instance of canvas is served over ssl (https) or not
   # defaults to true for production, false for test/development
-  ssl: false
+  ssl: true
   # files_domain: "canvasfiles.example.com"
