--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,24 @@
 version: '3'
 services:
   postgres:
+    container_name: postgres
     image: postgres
     environment:
       - POSTGRES_PASSWORD=admin
       - POSTGRES_USER=canvas
-      - POSTGRES_DB=canvas_${ENVIRONMENT}
+      - POSTGRES_DB=canvas_production
     networks:
       - canvas
 
   canvas:
+    container_name: canvas
     build:
       context: .
       dockerfile: canvas.dockerfile
-      args:
-        - ENVIRONMENT=${ENVIRONMENT}
-      network: canvas
     depends_on:
       - postgres
     ports:
-      - "3000:3000"
+      - "443:443"
       - "8080:80"
     networks:
       - canvas
