Change base image and add quick setup

--- a/canvas.conf
+++ b/canvas.conf
@@ -3,8 +3,8 @@ events {
     worker_connections  1024;
 }
 http {
-    passenger_root /var/lib/gems/3.0.0/gems/passenger-6.0.20;
-    passenger_ruby /root/.rbenv/shims/ruby;
+    passenger_root /usr/local/bundle/gems/passenger-6.0.20;
+    passenger_ruby /usr/local/bin/ruby;
 
     include       mime.types;
     default_type  application/octet-stream;
@@ -26,7 +26,7 @@ server {
 #   }
 
   passenger_enabled on;
-  passenger_ruby /root/.rbenv/shims/ruby;
+  passenger_ruby /usr/local/bin/ruby;
   passenger_friendly_error_pages on;
 }
 
@@ -45,7 +45,7 @@ server {
 
   keepalive_timeout 70;
   passenger_enabled on;
-  passenger_ruby /root/.rbenv/shims/ruby;
+  passenger_ruby /usr/local/bin/ruby;
   passenger_friendly_error_pages on;
 
 }
