Update canvas.conf to allow access to /var/www/canvas/public

--- a/canvas.conf
+++ b/canvas.conf
@@ -21,9 +21,9 @@ server {
 #    rewrite ^(.*)$ https://$http_host$request_uri redirect;
 #   }
 
-#   location /var/www/canvas/public {
-#     allow all;
-#   }
+  location /var/www/canvas/public {
+    allow all;
+  }
 
   passenger_enabled on;
   passenger_ruby /usr/local/bin/ruby;
